--- a/demo/views/error.ejs
+++ b/demo/views/error.ejs
@@ -1,3 +1,35 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<%- include layout_head.ejs%>
+<div style="background-color: red"><%= err %></div>
+<form class="form-horizontal" method="post">
+    <fieldset>
+        <legend>USER REG</legend>
+
+        <div class="control-group">
+            <label class="control-label" for="username">USERNAME</label>
+            <div class="controls">
+                <input type="text" class="input-xlarge" id="username" name="username" />
+                <p class="help-block">Username is used for login and show</p>
+            </div>
+        </div>
+
+        <div class="control-group">
+            <label class="control-label" for="password">PASSWORD</label>
+            <div class="controls">
+                <input type="password" class="input-xlarge" id="password" name="password" />
+            </div>
+        </div>
+
+        <div class="control-group">
+            <label class="control-label" for="password-repeat">REPEAT PASSWORD</label>
+            <div class="controls">
+                <input type="password" class="input-xlarge" id="password-repeat" name="password-repeat" />
+            </div>
+        </div>
+
+        <div class="form-actions">
+            <button type="submit" class="btn btn-primary">REGISTER</button>
+        </div>
+    </fieldset>
+</form>
+
+<%- include layout_footer.ejs %>
